non fixed header on smaller screens

--- a/wp-content/themes/jtdigitalmedia/style.css
+++ b/wp-content/themes/jtdigitalmedia/style.css
@@ -928,6 +928,9 @@ a:active {
 }
 
 @media screen and (max-width: 58em) {
+	.site-header {
+		position: absolute;
+	}
 	.header-logo {
 		float: none;
 		padding-left: 50px;
